# shrimpbench

./: README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: make_demo.py
src/shrimpbench/: __init__.py  runner.py
tests/: test_shrimpbench.py
