[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shrimpbench"
version = "2.0.0"
description = "Zero-effort benchmarking utility with smart DataFrame validation and Rich CLI dashboard"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "pandas",
    "numpy",
    "line-profiler",
    "rich",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/UdaykiranEstari/shrimpbench"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
